@@ -49,72 +49,10 @@
 #define _SLEEP() __asm__ __volatile__ ("sleep")
 #define _OPC(op) __asm__ __volatile__ (".word %0" : : "n" (op))
 
-#define __LPM_enhanced__(addr) ({		\
-	unsigned short __addr16 = (unsigned short)(addr); \
-	unsigned char __result;			\
-	__asm__ (				\
-		"lpm %0, Z"			\
-		: "=r" (__result)		\
-		: "z" (__addr16)		\
-	);					\
-	__result;				\
- })
-
-#define __LPM_classic__(addr) ({		\
-	unsigned short __addr16 = (unsigned short)(addr); \
-	unsigned char __result;			\
-	__asm__ (				\
-		"lpm" "\n\t"			\
-		"mov %0, r0"			\
-		: "=r" (__result)		\
-		: "z" (__addr16)		\
-		: "r0"				\
-	);					\
-	__result;				\
- })
-
-/* Only for devices with more than 64K of program memory.
-   RAMPZ must be defined (see iom103.h).  */
-
-#define __ELPM_enhanced__(addr) ({		\
-	unsigned long __addr32 = (unsigned long)(addr); \
-	unsigned char __result;			\
-	__asm__ (				\
-		"out %2, %C1" "\n\t"		\
-		"movw r30, %1" "\n\t"		\
-		"elpm %0, Z"			\
-		: "=r" (__result)		\
-		: "r" (__addr32),		\
-		  "I" (_SFR_IO_ADDR(RAMPZ))	\
-		: "r30", "r31"			\
-	);					\
-	__result;				\
- })
-
-#define __ELPM_classic__(addr) ({		\
-	unsigned long __addr32 = (unsigned long)(addr); \
-	unsigned char __result;			\
-	__asm__ (				\
-		"out %2, %C1" "\n\t"		\
-		"mov r31, %B1" "\n\t"		\
-		"mov r30, %A1" "\n\t"		\
-		"elpm" "\n\t"			\
-		"mov %0, r0"			\
-		: "=r" (__result)		\
-		: "r" (__addr32),		\
-		  "I" (_SFR_IO_ADDR(RAMPZ))	\
-		: "r0", "r30", "r31"		\
-	);					\
-	__result;				\
- })
-
-#if defined (__AVR_ENHANCED__)
-#define  _LPM(addr)  __LPM_enhanced__(addr)
-#define _ELPM(addr) __ELPM_enhanced__(addr)
-#else
-#define  _LPM(addr)  __LPM_classic__(addr)
-#define _ELPM(addr) __ELPM_classic__(addr)
-#endif
+/* _LPM, _ELPM */
+#include <avr/pgmspace.h>
+#define _LPM(x) __LPM(x)
+#define _ELPM(x) __ELPM(x)
 
 /* _EEGET, _EEPUT */
 #include <avr/eeprom.h>
